@@ -30,7 +30,7 @@
     <Logger name="org.apache.zookeeper" level="WARN"/>
     <Logger name="org.apache.hadoop" level="WARN"/>
     <Logger name="org.apache.directory" level="WARN"/>
-    <Logger name="org.apache.solr.hadoop" level="INFO"/>
+    <Logger name="log4j.logger.org.apache.solr.hadoop" level="INFO"/>
 
     <Root level="INFO">
       <AppenderRef ref="STDERR"/>
