@@ -32,8 +32,6 @@ Jetty 9.4.10.v20180503
 Upgrade Notes
 ----------------------
 
-* SOLR-7887: Solr now uses Log4J 2.11. The log4j configuration is now in log4j2.xml rather than lo4j.properties files
-
 * SOLR-11673: Slave doesn't commit empty index when completely new index is detected on master during replication. 
   To return the previous behavior pass false to skipCommitOnMasterVersionZero in slave section of replication 
   handler configuration, or pass it to the fetchindex command.
@@ -51,6 +49,7 @@ New Features
 * SOLR-12015: Add support "add-distinct" in AtomicURP so that we can use the 'add-distict' as a request parameter e.g:
   atomic.<multival-field-name>=add-distict (Amrit Sarkar via noble)
 
+<<<<<<< HEAD
 * SOLR-7887: Upgrade Solr to use Log4J 2.11
  (Tim Potter, Keith Laban, Shawn Heisey, Ralph Goers, Erick Erickson, Varun Thacker)
 
@@ -132,6 +131,8 @@ New Features
 
 * SOLR-12175: Add random field type and dynamic field to the default managed-schema (Joel Bernstein)
 
+=======
+>>>>>>> parent of 890dcb7d94... SOLR-7887: Log4J2 upgrade fixes
 Bug Fixes
 ----------------------
 * SOLR-5351: Fixed More Like This Handler to use all fields provided in mlt.fl when used with
@@ -495,6 +496,9 @@ Upgrade Notes
   from the earlier default of 30 seconds. This affects how soon Solr adds new replicas to replace the replicas
   on nodes which have either crashed or shutdown.
 
+* SOLR-7887: Solr now uses Log4J 2.10. The log4j configuration is now in log4j2.xml rather than lo4j.properties
+  files (Shawn Heisey, Keith Laban, Timothy Potter, Varun Thacker, Erick Erickson,
+
 New Features
 ----------------------
 * SOLR-11285: Simulation framework for autoscaling. (ab)
@@ -821,6 +825,8 @@ Other Changes
 
 * SOLR-12097: Document the diskType policy attribute and usage of disk space in Collection APIs.
   (Cassandra Targett, shalin)
+
+* SOLR-7887: Upgrade Solr to Log4J 2.10 (Tim Potter, Keith Laban, Shawn Heisey, Ralph Goers, Varun Thacker)
 
 ==================  7.2.1 ==================
 
